--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.24.1",
     "styled-components": "^6.1.11",
     "styled-reset": "^4.5.2",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite-plugin-svgr": "^4.2.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@svgr/rollup": "^8.1.0",
