Update Vercel deployment configuration

--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,3 +1,1 @@
-{
-  "projectId": "prj_VPmm3YTpRQuuu4a9enpUgLpZWv6Z"
-}
+{"projectId":"prj_VPmm3YTpRQuuu4a9enpUgLpZWv6Z","orgId":"team_af7xDMCLMrfu48HpAnXrff0b"}
