Fix : vercel.json추가 - 404 해결하기 위해 루트에 vercel.json추가

--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,5 +1,4 @@
 {
   "projectId": "prj_VPmm3YTpRQuuu4a9enpUgLpZWv6Z",
-  "orgId": "team_af7xDMCLMrfu48HpAnXrff0b",
-  "routes": [{ "handle": "filesystem" }, { "src": "/.*", "dest": "/index.html" }]
+  "orgId": "team_af7xDMCLMrfu48HpAnXrff0b"
 }
