--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.13.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.24.1",
     "styled-components": "^6.1.11",
