--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-magic-motion": "^1.1.2",
     "react-router-dom": "^6.24.1",
     "react-transition-group": "^4.4.5",
+    "react-typed": "^2.0.12",
     "styled-components": "^6.1.11",
     "styled-reset": "^4.5.2",
     "vite-plugin-svgr": "^4.2.0",
