--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.51.9",
+    "@types/react-modal": "^3.16.3",
     "@types/react-transition-group": "^4.4.10",
     "axios": "^1.7.2",
     "lodash": "^4.17.21",
@@ -19,6 +20,7 @@
     "react-intersection-observer": "^9.13.0",
     "react-loading": "^2.0.3",
     "react-magic-motion": "^1.1.2",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.24.1",
     "react-transition-group": "^4.4.5",
     "react-typed": "^2.0.12",
