--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-intersection-observer": "^9.13.0",
     "react-loading": "^2.0.3",
     "react-magic-motion": "^1.1.2",
+    "react-markdown": "^9.0.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.24.1",
     "react-transition-group": "^4.4.5",
